--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="main">#FF4155</color>
+    <color name="background">#EFEFEF</color>
+    <color name="black_shadow">#4D3E3D3D</color>
+    <color name="white_shadow">#4DFFFFFF</color>
 </resources>
