--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -143,7 +143,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_marginStart="34dp"
         android:layout_marginEnd="34dp"
         android:layout_marginBottom="16dp"
@@ -158,7 +158,7 @@
         android:id="@+id/textRegistrationAlready"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="38dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/registration_already"
         android:textColor="@color/main"
         app:layout_constraintBottom_toBottomOf="parent"
