--- a/app/src/main/res/navigation/nav_graf.xml
+++ b/app/src/main/res/navigation/nav_graf.xml
@@ -9,5 +9,14 @@
         android:id="@+id/signInFragment"
         android:name="com.example.klukva.presentation.screens.signin.SignInFragment"
         android:label="fragment_sign_in"
-        tools:layout="@layout/fragment_sign_in" />
+        tools:layout="@layout/fragment_sign_in" >
+        <action
+            android:id="@+id/action_signInFragment_to_logInFragment"
+            app:destination="@id/logInFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/logInFragment"
+        android:name="com.example.klukva.presentation.screens.login.LogInFragment"
+        android:label="fragment_log_in"
+        tools:layout="@layout/fragment_log_in" />
 </navigation>
