--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Klukva" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Klukva" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/main</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,7 +14,10 @@
         <!-- Customize your theme here. -->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-
-
     </style>
+
+    <style name="Launcher" parent="Theme.Klukva">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+    </style>
+
 </resources>
