--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -4,7 +4,7 @@
 
     <item>
         <bitmap
-            android:src="@drawable/cranberry_logo_"
+            android:src="@drawable/cranberry_logo"
             android:gravity="center"/>
     </item>
 </layer-list>
