--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,10 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="main">#FF4155</color>
+    <color name="mainT">#FFB700</color>
     <color name="background">#EFEFEF</color>
     <color name="black_shadow">#4D3E3D3D</color>
     <color name="white_shadow">#4DFFFFFF</color>
     <color name="view_page_color">#EFEFEF</color>
+    <color name="place_color_reserved_table">#78787880</color>
 </resources>
