--- a/app/src/main/res/drawable/ic_person.xml
+++ b/app/src/main/res/drawable/ic_person.xml
@@ -1,17 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="62dp"
-    android:height="69dp"
-    android:viewportWidth="62"
-    android:viewportHeight="69">
+    android:width="48dp"
+    android:height="48dp"
+    android:viewportWidth="960"
+    android:viewportHeight="960">
   <path
-      android:pathData="M1.067,68C0.335,58 5.296,38 31,38C56.704,38 61.665,58 60.933,68"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M47,16.5C47,25.032 39.865,32 31,32C22.135,32 15,25.032 15,16.5C15,7.968 22.135,1 31,1C39.865,1 47,7.968 47,16.5Z"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+      android:fillColor="#FF000000"
+      android:pathData="M480,479q-66,0 -108,-42t-42,-108q0,-66 42,-108t108,-42q66,0 108,42t42,108q0,66 -42,108t-108,42ZM160,800v-94q0,-38 19,-65t49,-41q67,-30 128.5,-45T480,540q62,0 123,15.5t127.92,44.69q31.3,14.13 50.19,40.97Q800,668 800,706v94L160,800ZM220,740h520v-34q0,-16 -9.5,-30.5T707,654q-64,-31 -117,-42.5T480,600q-57,0 -111,11.5T252,654q-14,7 -23,21.5t-9,30.5v34ZM480,419q39,0 64.5,-25.5T570,329q0,-39 -25.5,-64.5T480,239q-39,0 -64.5,25.5T390,329q0,39 25.5,64.5T480,419ZM480,329ZM480,740Z"/>
 </vector>
